<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/appIdEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="Enter your app id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userIdEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="Enter your user id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appIdEditText" />

    <EditText
        android:id="@+id/apiKeyEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="Enter your api key"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userIdEditText" />

    <Button
        android:id="@+id/getOffersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Get offers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apiKeyEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>